<resources>
    <string name="app_name">splash</string>
    <string name="agriculture">AGRICULTURE FROM ANDROID</string>
    <string name="agroid">AGROID</string>
    <string name="welcome">WELCOME</string>
    <string name="signin">Sign In to Continue</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="pwd2">Password(Must Contain letters,character )</string>
    <string name="login">Login</string>
    <string name="new_user">New User? SIGN UP</string>
    <string name="lets">Lets get Start to Planting</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="tp">Telephone Number (07********)</string>
    <string name="district">District</string>
    <string name="signup">Sign Up</string>
    <string name="already_user">Already have an Account?Login</string>
    <string name="market_price">AVERAGE MARKET PRICES (1Kg)</string>
    <string name="search">Search</string>
    <string name="vege">Vegetable</string>
    <string name="fruit">Fruits</string>
    <string name="vege_tag">Vegetable #</string>
    <string name="rs">Price:Rs.</string>
    <string name="earn">Your Earn</string>
    <string name="crop">District and Crops</string>
    <string name="todo">TODO</string>
    <string name="Add">Add</string>
    <string name="home">Home</string>
    <string name="crops">Crops</string>
    <string name="disease">Disease</string>
    <string name="earning">Earn</string>
    <string name="market_Price">Market Price</string>
    <string name="dnc">District and Crops</string>
    <string name="user">User</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="check_your_earn_here">CHECK YOUR EARN HERE</string>
    <string name="killo">Enter the Quantity in Killo</string>
    <string name="rupees">Rs.</string>
    <string name="calculate">Calculate</string>
    <string name="schedule">Planting Schedule</string>
    <string name="admin_home">Admin Home</string>
    <string name="datainsert">Data inserted Successfully</string>
    <string name="dataupdate">Data Updated Successfully</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="your_earn">Your Earn</string>
    <string name="_100">100</string>
    <string name="enter_your_district_here">Enter Your District Here</string>
    <string name="suitable">Suitable Crop for Grow</string>
    <string name="username">User Name</string>
    <string name="incorrect_attemps">Incorrect Attemps:</string>
    <string name="dash">Agroid</string>
    <string name="cropDash">Crops</string>
    <string name="dis1">Common</string>
    <string name="dis2">Diseases</string>
    <string name="p1Dash">Price of</string>
    <string name="p2Dash">Vegetables</string>
    <string name="p3Dash">and Fruits</string>
    <string name="btnAddCrop">Insert</string>
    <string name="cropDis">DISPLAY</string>
    <string name="txtPlant">Planting</string>
    <string name="txtSchedule">Schedule</string>
    <string name="txtSch">Schedule</string>


    <string-array name='district'>
        <item>Jaffna</item>
        <item>Kilinochchi</item>
        <item>Mannar</item>
        <item>Mullaitivu</item>
        <item>Vavuniya</item>
        <item>Puttalam</item>
        <item>Kurunegala</item>
        <item>Gampaha</item>
        <item>Colombo</item>
        <item>Kalutara</item>
        <item>Anuradhapura</item>
        <item>Polonnaruwa</item>
        <item>Matale</item>
        <item>Kandy</item>
        <item>Nuwara Eliya</item>
        <item>Kegalle</item>
        <item>Ratnapura</item>
        <item>Trincomalee</item>
        <item>Batticaloa</item>
        <item>Ampara</item>
        <item>Badulla</item>
        <item>Monaragala</item>
        <item>Hambantota</item>
        <item>Matara</item>
        <item>Galle</item>
    </string-array>


    <string name="admintext1"><b>AGROID</b></string>
    <string name="admintext2"><b>Add New Plant Shedule</b></string>
    <string name="admintext3">Plant Name</string>
    <string name="admintext5">Plant ID</string>
    <string name="admintext6">Plant Description</string>
    <string name="add_button">ADD</string>
    <string name="delete_button">DELETE</string>
    <string name="Added_button">Done</string>
    <string name="admintext7"><b>Delete Plant Shedule</b></string>
    <string name="admintext8"><b>Plant ID</b></string>
    <string name="admintext9"><b>Plant Name</b></string>
    <string name="admintext10"><b>Plant Description</b></string>
    <string name="admintext11"><b>Plant Sheduling </b></string>
    <string name="admin_b1"><b>CROPS</b></string>
    <string name="admin_b2"><b>PLANTING SHEDULE</b></string>
    <string name="admin_b3"><b>DISEASES</b></string>
    <string name="admin_t12"><b>CROPS</b></string>
    <string name="admin_t14"><b>PLANTING</b></string>
    <string name="admin_t15"><b>DISEASES</b></string>
    <string name="Update">UPDATE</string>
    <string name="Del_btn">DELETE</string>
    <string name="admintext16">UPDATE PLANTING SHEDULE</string>
    <string name="id">Enter Plant ID</string>
    <string name="namen">Enter Plant Name</string>
    <string name="shedule">Enter Plant Shedule</string>
    <string name="retrieve">show</string>
    <string name="url">Image-URL</string>
    <string name="selectdate">Plant Date</string>
    <string name="btn_next">Next</string>
    <string name="title">PLANTING SHEDULES</string>
    <string name="Plantingdate">Planting date</string>
    <string name="ccharvest">Pick harvesting date</string>

    <string name="hd">Harvesting Date</string>
    <string name="calculator">PESTICIDE CALCULATOR</string>
    <string name="txt1">Enter active ingrediants of pesticides in %v/v or % w/w</string>
    <string name="txt2">Enter it s recommended rate of application in kg/hectare</string>
    <string name="txt3">Enter area of application in hectare</string>
    <string name="totamt">Amount of pesticide</string>
    <string name="crop_id">Crop ID</string>
    <string name="display">Display</string>
    <string name="enter_the_id_of_the_crop_to_be_displayed">Enter The ID of the Crop to be Displayed</string>
    <string name="add_crop_details">Add Crop Details</string>
    <string name="crop_name">Crop Name :</string>
    <string name="change_crop_details">Change Crop Details</string>

    //Dieses
    <string name="t1"><b>DISEASES</b></string>
    //admin
    <string name="t2"><b>ADD</b></string>
    <string name="t3"><b>UPDATE</b></string>
    <string name="t4"><b>DELETE</b></string>
    <string name="t5"><b>ADD DISEASES</b></string>
    <string name="t13">add</string>
    <string name="t6">Disease Name</string>
    <string name="t7">What cause it?</string>
    <string name="t8">What it look like?</string>
    <string name="t9">What you can do?</string>
    <string name="t10">UPDATE DETAILS</string>
    <string name="t11">Disease Name</string>
    <string name="t12">DELETE DISEASE</string>//end admin
    <string name="t15">All Disease Names</string>
    <string name="t17">Disease ID</string>
    <string name="Dashboardcard1">Crops</string>//dieases home
    <string name="Dashboardcard2">Planting Schedule</string>
    <string name="Dashboardcard3">Diseases and Prevents</string>
    <string name="logo_name" />
    <string name="search_text"> search</string>
    <string name="disease_text">Common disease</string>
    <string name="dec1"> Bacterial Spot</string>
    <string name="q1frag1"> what cause it</string>
    <string name="ans1frag1"> Warm,Wet Environment</string>
    <string name="q2frag1"> what it look like.</string>
    <string name="ans2frag1">Small,Dark,Raised Spots</string>
    <string name="q3frag1"> what you can do?</string>
    <string name="ans3frag1">Destroy infected plants and apply afungiside</string>
    <string name="card1Description">Bacterial Spot</string>
    <string name="card2Description">Bacterial Blight</string>
    <string name="card3Description">Ralstoniya Solanacearum</string>
    <string name="card4Description">Powdery mildews</string>
    <string name="card5Description">Rusts</string>
    <string name="t16">Addmin</string>
    <string name="signupsuc">SignUp Successful.Login to Continue</string>

</resources>