<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/home"/>


        <item
            android:id="@+id/nav_crops"
            android:title="@string/crops"
            android:icon="@drawable/plant"/>

        <item
            android:id="@+id/nav_disease"
            android:title="@string/disease"
            android:icon="@drawable/disease"/>

        <item
            android:id="@+id/nav_earn"
            android:title="@string/earning"
            android:icon="@drawable/dollar"/>

        <item
            android:id="@+id/nav_market"
            android:title="@string/market_price"
            android:icon="@drawable/market"/>

        <item
            android:id="@+id/nav_district"
            android:title="@string/dnc"
            android:icon="@drawable/district"/>



    </group>

    <item android:title="@string/profile">
        <menu>

            <group android:checkableBehavior="single">


                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/user"
                    android:icon="@drawable/user"/>


                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/logout"/>

            </group>
        </menu>
    </item>



</menu>